--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bkrith/multilevel",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "server/client implementation for levelDB database",
   "main": "index.js",
   "keywords": [
@@ -23,17 +23,17 @@
   "author": "Vassilis",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.17.13",
-    "eslint": "^5.16.0",
-    "nodemon": "^1.19.4",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.20.1",
-    "typedoc": "^0.15.6",
-    "typescript": "^3.7.4",
-    "typescript-eslint-parser": "^21.0.2"
+    "@types/node": "15.6.0",
+    "eslint": "7.27.0",
+    "nodemon": "2.0.7",
+    "ts-node": "9.1.1",
+    "tslint": "5.20.1",
+    "typedoc": "0.20.36",
+    "typescript": "4.2.4",
+    "typescript-eslint-parser": "21.0.2"
   },
   "dependencies": {
-    "level": "^4.0.0",
-    "uuid-v4": "^0.1.0"
+    "level": "7.0.0",
+    "uuid-v4": "0.1.0"
   }
 }
